[gd_scene load_steps=6 format=3 uid="uid://bb1jp3uunya1q"]

[ext_resource type="Script" path="res://scripts/fish.gd" id="1_4dwy6"]
[ext_resource type="Texture2D" uid="uid://bpx44ywecp754" path="res://sprites/error.png" id="2_qxkfg"]
[ext_resource type="Theme" uid="uid://btp17lophm3xe" path="res://others/maintheme.tres" id="3_q7de3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mca4b"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4fds8"]
size = Vector2(16, 20)

[node name="Fish" type="Node2D"]
script = ExtResource("1_4dwy6")

[node name="HurtArea" type="Area2D" parent="."]

[node name="HurtBox" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("RectangleShape2D_mca4b")

[node name="DmgArea" type="Area2D" parent="."]

[node name="DmgBox" type="CollisionShape2D" parent="DmgArea"]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_4fds8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qxkfg")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -9.0
offset_top = -12.0
offset_right = 9.0
offset_bottom = -8.0
theme = ExtResource("3_q7de3")
value = 100.0
show_percentage = false
